# fast-feature-fields

./: .gitignore  README.md  everything.py  hubconf.py  main.py  minimal.ipynb  pyproject.toml  test_speed.py
_aoti_pt2/: README.md  export_dav2_to_pt2.py  export_f3_to_pt2.py  export_flowhead_to_pt2.py  test_exported_pt2.py
_aoti_pt2/_cpp_src/: CMakeLists.txt  test_exported_pt2.cpp
_aoti_pt2/_py_src/: test_exported_pt2.py
confs/accelerate_confs/: 2GPU.yml  4GPU.yml
confs/everything/: car_day.yml  car_forest.yml  car_night.yml  dsec.yml  everything_car_day.yml  everything_car_forest.yml  everything_car_night.yml  everything_falcon.yml  everything_m3ed_to_dsec.yml  everything_spot.yml  falcon.yml  spot.yml
confs/monocular_depth/: dav2b_frames_fullm3ed_pseudo_518x518x20.yml  dav2b_frames_fullm3edfalcon_pseudo_518x518x20.yml  dav2b_frames_fullm3edspot_pseudo_518x518x20.yml  dav2b_frames_traindsec_finetune_disparity_518x518x20.yml  dav2b_frames_traindsec_finetune_disparity_518x518x20_grad.yml  dav2b_frames_trainm3ed_finetune_disparity_518x518x20_grad.yml  dav2b_frames_trainmvsec_nopretrain_finetune_disparity_518x518x20.yml  dav2b_fullm3ed_pseudo_518x518x20.yml  dav2b_fullm3edfalcon_pseudo_518x518x20.yml  dav2b_fullm3edspot_pseudo_518x518x20.yml  dav2b_fullttairv2indoor_pseudo_308x308x20.yml  dav2b_traindsec_finetune_disparity_518x518x20.yml  dav2b_traindsec_finetune_disparity_518x518x20_grad.yml  dav2b_traindsec_nopretrain_finetune_disparity_518x518x20.yml  dav2b_trainm3ed_finetune_disparity_518x518x20_grad.yml  dav2b_trainm3edfalcon_finetune_disparity_518x518x20_grad.yml  dav2b_trainm3edspot_finetune_disparity_518x518x20.yml  dav2b_trainm3edspot_finetune_disparity_518x518x20_grad.yml  dav2b_trainmvsec_nopretrain_finetune_disparity_518x518x20.yml  dav2b_voxelgrid_fullm3ed_pseudo_518x518x20.yml  dav2b_voxelgrid_fullm3edfalcon_pseudo_518x518x20.yml  dav2b_voxelgrid_fullm3edspot_pseudo_518x518x20.yml  dav2b_voxelgrid_traindsec_finetune_disparity_518x518x20.yml  dav2b_voxelgrid_traindsec_finetune_disparity_518x518x20_grad.yml  dav2b_voxelgrid_trainm3ed_finetune_disparity_518x518x20_grad.yml  dav2b_voxelgrid_trainmvsec_nopretrain_finetune_disparity_518x518x20.yml  dav2s_fullttairv2indoor_pseudo_308x308x20.yml  eval_dsec_gt.yml  eval_m3ed_falcon_gt.yml  eval_m3ed_gt.yml  eval_m3ed_spot_gt.yml  eval_mvsec_gt.yml  full_car_urban_day_gt_train.yml  full_car_urban_day_gt_val.yml  full_car_urban_day_pseudo_train.yml  full_car_urban_day_pseudo_val.yml  full_dsec_gt_train.yml  full_dsec_gt_val.yml  full_falcon_gt_train.yml  full_falcon_gt_val.yml  (+10 more)
confs/optical_flow/: dsec_test.yml  dsec_train.yml  dsec_train_gt.yml  eval_dsec_gt.yml  eval_m3ed_falcon_gt.yml  eval_m3ed_gt.yml  eval_m3ed_night_gt.yml  eval_m3ed_spot_gt.yml  eval_mvsec_gt.yml  full_car_urban_day_train.yml  full_car_urban_day_val.yml  m3ed_falcon_test.yml  m3ed_falcon_test_gt.yml  m3ed_falcon_train.yml  m3ed_night_test_gt.yml  m3ed_spot_test.yml  m3ed_spot_test_gt.yml  m3ed_spot_train.yml  m3ed_test.yml  m3ed_test_gt.yml  m3ed_train.yml  mvsec_test.yml  mvsec_test_gt.yml  mvsec_train.yml  optflow_frames_traindsec_50msff_pyr4_28k.yml  optflow_frames_trainm3ed_20msff_pyr5_28k.yml  (+22 more)
data/: DATASET.md  README.md
scripts/: dataset_stats.py  dsec_semantic_misalignment_test.py  generate_rectified_images.py  generate_ts.py  m3ed_viz.py  makevid.py  process_mvsec.py  read_mvsec_bag.py  setup_m3ed_falcon.sh  viz_gt_depth.py  viz_gt_flow.py
(+130 files in other folders)
